--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -331,7 +331,41 @@
                 <h3 id="testing-policy">Testing Policy</h3>
                 <p><mark>The class will vote on the conditions for tests and final exam.</mark></p>
                 <h3 id="grading">Grading Policy</h3>
-                <p><mark>TBA</mark></p>
+                <p>
+                    I use a Standards-Based Grading System in this course. This means that I live and breath
+                    the learning outcomes when thinking about assessing each one of you. Throughout each assignment 
+                    (homework, quizzes, tests, final exam, and course project), every question connects to at least
+                    one of the learning outcomes. Each time you answer a question, you are adding to the body of
+                    evidence about your understanding for each outcome. I use that entire body of evidence to evaluate
+                    where you end up for each learning outcome.
+                </p>
+                <p>
+                    In an ideal world, I would report multiple grades to the Registrar; one for each of the Learning Outcomes.
+                    However, Penn State is not advanced enough in their thinking to do such a thing--they are living in a
+                    distorated past. I can only report a single letter grade. Thus, at the end of the semester, I am tasked
+                    with determining the most appropriate letter grade based upon the semester's worth of data on the
+                    Learning Outcomes and Learning Objectives for each of you.
+                </p>
+                <p>
+                    I do this in a data driven way thus each semester is a little bit different. This allows me to make
+                    adjustments to account for the unique elements of each semester. The general process involves me looking
+                    at the following:
+                </p>
+                <ol type="1">
+                    <li>How many of your assessed Learning Outcomes are at the Adept or Highly Developed  Proficiency Level?</li>
+                    <li>How many of your assessed Learning Outcomes are at any of the three Proficiency levels (Adept, Highly Developed, Skillful)?</li>
+                    <li>How many of your assessed Learning Objectives are at the Adept or Highly Developed Proficiency Level?</li>
+                    <li>How many of your assessed Learning Objectives are at any of the three Proficiency levels (Adept, Highly Developed, Skillful)?</li>
+                </ol>
+                <p>
+                    Notice that I focus on Learning Outcomes and Objectives; I'm not looking at homework scores, assessment
+                    scores, your participation, or your attendance. The assessment scores are a function of learning outcomes
+                    but can create confusion. For example, if you demonstrate Adept Proficiency on one Learning Objective but
+                    Not Yet, Not Shown on another--and the assignment is just those two questions--the assignment score looks
+                    like a 50%; you don't get the credit for the outcome you have a great understanding of.
+                    Your participation and attendance will impact your learning, thus there's no need to grade you on them.
+                    Grading participation and attendance can also unfairly impact students in a number of ways.
+                </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="calendar">What's the course schedule look like? (Tentative Course Calendar)</h2>
                 <p>You can check out the <em>tenative</em> course schedule: <a class="bodylinks" target="_blank"
@@ -484,7 +518,7 @@
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="integrity">What are the policy on cheating and/or getting help in the class?</h2>
-                <h3>Why is academic integrity important?</h3>
+                <h3 id="ai-importance">Why is academic integrity important?</h3>
                 <p>
                     A central aspect of education is that you build your knowledge and develop ways of thinking
                     that will support you in your life and career. As one of your educators, part of my role is
@@ -505,7 +539,7 @@
                     College of Science a place where every individual feels respected and valued, as well as challenged
                     and rewarded.
                 </p>
-                <h3>What are the different ways in which a person might violate academic integrity policies?</h3>
+                <h3 id="ai-types">What are the different ways in which a person might violate academic integrity policies?</h3>
                 <p>
                     There are many different ways in which a person's actions may directly or indirectly lead to
                     violating Academic Integrity. Keep in mind whether a person acts intentionally or accidentaly,
@@ -517,7 +551,7 @@
                     <li><strong>Plagiarism:</strong> This action occurs when someone presents someone else's work as
                         their own, including their own. This can describe situations from forgetting to cite a source
                         to copying someone's work without their knowledge. Avoid plagiarism by citing your sources
-                        (for figures, images, etc.) and giving credit to the ideas and work of others.</li>
+                        (for figures, images, code, etc.) and giving credit to the ideas and work of others.</li>
                     <li><strong>Self-Plagarism:</strong> Self-plagiarism occurs when a person submits work that they've
                         submitted elsewhere; for example, taking a paper from one class and submitting that paper
                         (even with minor changes) for a grade in a different class without prior authorization.
@@ -544,10 +578,6 @@
                         CourseHero, etc.). At the core of all these actions lies a person presenting someone else's work
                         as their own. Avoid using technology improperly by seeking clarification about when, how, and what
                         technologies are allowed on assignments.</li>
-                    <li><strong>Special Note on Chatbots:</strong> Chatbots such as ChatGPT appear confident in the
-                        answers they provide. However, their answers are not always logical or stand up to scrutiny.
-                        If a person relies upon chatbots to do their work, they will miss out on critical opportunities
-                        to develop the ways of thinking necessary to detect problems with AI generated answers.</li>
                 </ul>
                 <p>
                     The best advice I can provide is to talk with your instructor before you submit any assignment. Once
@@ -568,7 +598,7 @@
                     assignments and lab assignments in groups, but each student must write up answers in their own words
                     and submit lab quizzes and homework assignments separately.
                 </p>
-                <h3>What are the differences between collusion, people working together, and group work?</h3>
+                <h3 id="ai-differences">What are the differences between collusion, people working together, and group work?</h3>
                 <p>
                     The major distinction between collusion, working together, and group work comes down to what
                     has been explicitly allowed by the instructor. Collusion is never allowed.
@@ -586,10 +616,53 @@
                     to be completed by a group of students together with a single submission for the group. This is not
                     a violation of academic integrity due to the specifications the instructor has set up for the assignment. 
                 </p>
-                <h3>Getting Help</h3>
+                <h3 id="ai-help">Where can I get help for this course?</h3>
                 <p><mark>TBD</mark></p>
-                <h3>Using ChatBots/Generative AI in this Course</h3>
-                <p><mark>Forthcoming</mark></p>
+                <p>
+                    Part of learning involves running into situations where you don't instantly have a solution.
+                    Rather, you have to think about the problem, try a few things, and then pieces fall into place.
+                    You do not have to engage in such struggles alone. Getting help is a great way to help you engage 
+                    in <em>productive struggle</em> that leads to better learning. However, not all sources of help
+                    will actually support your learning and growth. Here are my suggestions for places to seek help.
+                </p>
+                <ol>
+                    <li>Check your course notes and class recordings.</li>
+                    <li>Check the documentation in R.</li>
+                    <li>Talk with your classmates.</li>
+                    <li>Make use of Student Hours.</li>
+                    <li>Email your instructor.</li>
+                    <li>Talk to others who are not part of our course. (Use caution.)</li>
+                    <li>Search the internet. (Use caution.)</li>
+                </ol>
+                <p>
+                    You'll notice that on the last two I've placed the phrase "Use caution." While you might learn
+                    how to handle the specific problem you ask about, there's no guarantee that what you get from 
+                    these will help you later on in the course. Additionally, there may be differences in approaches
+                    that might cause you more problems. For example, online resources (e.g., Stack Overflow) may
+                    show solutions that are 1) out of date/not recommended anymore, 2) rely on packages that are no 
+                    longer available, 3) use techniques that are well-beyond what we're trying to do, 4) and/or cause 
+                    new problems when you attempt to incorporate them into your work. If you find a solution online 
+                    or got from someone not associated with our course, feel free to come talk to me about it. We 
+                    can go over it together and I can show you how we can evaluate such advice.
+                </p>
+                <h3 id="ai-chatbots">Can I use ChatBots/Generative AI in this course?</h3>
+                <p>
+                    Chatbots such as OpenAI's ChatGPT or Google's Bard appear confident in the answers they provide.
+                    However, their answers are not always logical nor stand up to scrutiny. If a person relies upon
+                    chatbots to do their work, they will miss out on critical opportunities to develop the ways of
+                    thinking necessary to detect problems with AI generated answers.
+                </p>
+                <p>
+                    An important part aspect of this course is to help you develop foundational ways of thinking about
+                    programming in R so that you can go on to write your own code for conducting analyses. Overly relying
+                    on other tools (e.g., ChatGPT, Bard, CodePilot, Stack Overflow, etc.) will limit your growth. This
+                    can then have implications for your job if you are constantly using these tools to do your work. 
+                    Therefore, unless explicit permission is given for a particular assignment, the entire class community
+                    (the instructor, the students, TAs, etc.) should actively refrain from using generative AI tools. 
+                    When such use is explicitly authorized, that work should be properly documented. Direct usage of output
+                    from chatbots should be treated much like a direct quotation; derivations of such output should 
+                    be treated as paraphrased text.
+                </p>
                 <h3>Consequences</h3>
                 <p>
                     Any instances of academic dishonesty will be pursued under the&nbsp;<a class="bodylinks"
