--- a/sample_syllabus.html
+++ b/sample_syllabus.html
@@ -536,6 +536,7 @@
                         </div>
                     </div>
                     <p style="text-align: right;"><a href="#catTop" class="bodylinks">Return to top</a></p>
+                    </div>
                     <h2 id="responsibilities">UPDATED: Class Community Responsibilities</h2>
                     <div class="wrap-collabsible">
                         <input id="faq28" class="toggle" type="checkbox">
@@ -1534,7 +1535,7 @@
                         <div class="collapsible-content">
                             <div class="content-inner">
                                 <p>
-                                    The syllabus for this course (and all other course syllabi) <em>does not</em> constitute a legal contract. Further, I intend for this syllabus to change to reflect the decisions we make as a community on several areas listed above as well as adapting to our needs throughout the semester. Changes to the syllabus will announced in class and updated here.
+                                    The syllabus for this course (and all other course syllabi) <em>does not</em> constitute a legal contract. Further, I intend for this syllabus to change to reflect the decisions we make as a community on several areas listed above as well as adapting to our needs throughout the semester. Changes to the syllabus will be announced in class and updated here.
                                 </p>
                             </div>
                         </div>
