--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -517,7 +517,7 @@
                     more information.
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
-                <h2 id="integrity">What are the policy on cheating and/or getting help in the class?</h2>
+                <h2 id="integrity">What is the policy on cheating and/or getting help in the class?</h2>
                 <h3 id="ai-importance">Why is academic integrity important?</h3>
                 <p>
                     A central aspect of education is that you build your knowledge and develop ways of thinking
@@ -617,7 +617,6 @@
                     a violation of academic integrity due to the specifications the instructor has set up for the assignment. 
                 </p>
                 <h3 id="ai-help">Where can I get help for this course?</h3>
-                <p><mark>TBD</mark></p>
                 <p>
                     Part of learning involves running into situations where you don't instantly have a solution.
                     Rather, you have to think about the problem, try a few things, and then pieces fall into place.
@@ -644,6 +643,10 @@
                     new problems when you attempt to incorporate them into your work. If you find a solution online 
                     or got from someone not associated with our course, feel free to come talk to me about it. We 
                     can go over it together and I can show you how we can evaluate such advice.
+                </p>
+                <p>
+                    When you are getting help be sure that you are not crossing the line and having someone else do your
+                    learning for you.
                 </p>
                 <h3 id="ai-chatbots">Can I use ChatBots/Generative AI in this course?</h3>
                 <p>
@@ -762,7 +765,7 @@
                     The syllabus for this course (and all other course syllabi) <em>does not</em> constitute a
                     legal contract. Further, I intend for this syllabus to change to reflect the decisions we
                     make as a community on several areas listed above as well as adapting to our needs
-                    throughout the semester. Changes to the syllabus will announced in class and updated here.
+                    throughout the semester. Changes to the syllabus will be announced in class and updated here.
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
 
