More Syllabus Updates

--- a/stat380syllabus.html
+++ b/stat380syllabus.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />
-    <title>Stat 184 Course FAQ/Syllabus</title>
+    <title>Stat 380 Course FAQ/Syllabus</title>
     <link media="screen,projection" type="text/css" href="1_Scripts/neil.css" rel="stylesheet" />
     <meta name="author" content="Neil Hatfield" />
     <meta name="keywords" content="Neil Hatfield" />
@@ -15,7 +15,7 @@
     <div id="wrapper">
         <div id="innerwrapper">
             <div id="header">
-                <h1 style="text-align: center;">STAT 184: Introduction to R</h1>
+                <h1 style="text-align: center; line-height: 110%;">STAT 380: Data Science Through Statistical Reasoning and Computation</h1>
                 <br />
                 <ul id="nav">
                     <li>Return to Neil's Webpage: </li>
@@ -27,9 +27,10 @@
             </div>
             <div id="contentnobars">
                 <p>
-                    This page serves as the Course Frequenty Asked Questions (FAQ) page and syllabus for Neil's STAT 184: Introduction to R course in Fall 2023. Feel free to scroll through the page and/or use the navigation links I've provided. If you find something that doesn't work, please let me know so I can fix it.
+                    This page serves as the Course Frequenty Asked Questions (FAQ) page and syllabus for Neil's STAT 380: Data Science Through Statistical Reasoning and Computation course in Fall 2023. Feel free to scroll through the page and/or use the navigation links I've provided. If you find something that doesn't work, please let me know so I can fix it.
                 </p>
-                <p><mark>Highlighted/marked text</mark> indicates a place where the class (you) will have a say in the creation of a course policy. After the first week, we'll have these sections filled out.</p>
+                <p><mark>Highlighted/marked text</mark> indicates a place where the class (you) will have a say in the creation of
+                a course policy. After the first week, we'll have these sections filled out.</p>
                 <p>Last updated: 8/20/2023</p>
                 <h2 id="topLinks">Quick Links</h2>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3">
@@ -50,30 +51,14 @@
                     From the <a class="bodylinks" target="_blank"
                         href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/stat/">
                         PSU Bulletin</a>: <br />
-                    R is a powerful, open-source programming language used widely for applications in statistics and
-                    data science. It is easily extendible, and thousands of user-created packages are publicly available
-                    to extend its capabilities. This course will introduce students to data computing fundamentals and a
-                    reproducible workflow using the R programming language and related tools. Students will be expected
-                    to access, join, wrangle, clean, and visualize real data from various sources (e.g. CSV, HTML
-                    scraping, web URL, R packages). The course will emphasize use of "tidyverse" R packages (e.g. dplyr,
-                    ggplot2), although students will also be exposed to Base R and other packages. In addition, students
-                    will be exposed to one or more integrated development environments (e.g. RStudio) and will be
-                    expected to write well-documented code using a reproducible workflow (e.g. RMarkdown, Git/GitHub).
-                    The course focuses on descriptive and graphical summary techniques rather than inferential
-                    statistical techniques.
-                </p>
-                <p>
-                    In essence, STAT184 is an opportunity for students majoring in Statistics and Data Science to gain
-                    familiarity with the statistical programming language R. Further, this class provides you an
-                    opportunity to develop ways of thinking that will assist you in using R (or another programming
-                    language) to carry out statistical analysis and communicate your findings.
+                        A case study-based course in the use of computing and statistical reasoning to answer data-intensive questions. STAT 380 Data Science Through Statistical Reasoning and Computation (3) This course addresses the fact that real data are often messy by taking a holistic view of statistical analysis to answer questions of interest. Various case studies will lead students from the computationally intensive process of obtaining and cleaning data, through exploratory techniques, and finally to rudimentary inferential statistics. This process will exploit students' exposure to introductory statistics as well as the R programming language -hence the required prerequisites- yet novel computing and analytical techniques will also be introduced throughout the course. For the collection of data, students will learn scripting and database querying skills; for their exploration, they will employ R capabilities for graphical and summary statistics; and for their analysis, they will build upon the basic concepts obtained in their introductory statistics course. The varied case studies will elucidate additional statistical topics such as identifying sources of bias and searching for highdimensional outliers.
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="meetingInfo">When does this class meet? (Course Meeting Info)</h2>
-                <p>Our class (Sec. 4) meets twice a week, each week of the semester, in person.</p>
+                <p>Our class (Sec. 3) meets three times a week, each week of the semester, in person.</p>
                 <ul>
-                    <li><strong>Location:</strong> Huck Life Sciences Building, Room 004</li>
-                    <li><strong>Time:</strong> Wednesdays and Fridays, 2:30pm to 3:20pm (ET)</li>
+                    <li><strong>Location:</strong> CEDAR Building, Room 134</li>
+                    <li><strong>Time:</strong> Mondays, Wednesdays, and Fridays, 11:15am to 12:05pm (ET)</li>
                 </ul>
                 <p>When the university closes for holidays, weather, or other unexpected events, we will not meet.</p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
@@ -91,13 +76,20 @@
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="courseMaterials">What materials do I need for the class? (Course Materials)</h2>
+                <h3 id="textbooks">Textbooks</h3>
                 <p>
                     In terms of textbooks, we will draw from a variety of sources which will be posted in Canvas. We
-                    will draw from <a class="bodylinks" target="_blank"
-                        href="https://dtkaplan.github.io/DataComputingEbook/">Computing (2nd Edition) by Daniel Kaplan &
-                        Matthew Beckman</a>, which is a free e-book for a number of readings. I will try to post
-                    additional books, references, and potentially helpful material as the semester progresses.
+                    will primarily use the following textbooks:
                 </p>
+                <ul>
+                    <li><a href="https://mdsr-book.github.io/mdsr3e/" target="_blank" class="bodylinks">Modern Data Science with R by Baumer, Kaplan, and Horton</a> (available for free at link).</li>
+                    <li><a href="https://r4ds.had.co.nz/" target="_blank" class="bodylinks">R for Data Science by Wickham and Grolemund</a> (available for free at link).</li>
+                    <li><a href="https://www.statlearning.com/" target="_blank" class="bodylinks">An Introduction to Statistical Learning with Applications in R by James, Witten, Hastie, and Tibshirani</a> (available for free at link)</li>
+                </ul>
+                <p>
+                    I will try to post additional books, references, and potentially helpful material as the semester progresses in Canvas.
+                </p>
+                <h3 id="technology">Technology Needs</h3>
                 <p>
                     As a technolgy based course, you will need access to the following:
                 </p>
@@ -142,24 +134,22 @@
                 <h3>Course Goals</h3>
                 <p>
                     The overarching goals for this course are to provide students with opportuntities and
-                    experiences with statistical software so that they may develop their programming skills,
-                    capabilities to use software in data analysis, and productive ways of thinking for data
-                    analysis and problem solving.
+                    experiences to engage in data science activities... TBF
                 </p>
                 <h3>Learning Objectives</h3>
                 <ul>
-                    <li>Students will develop their ability to create reproducible code that others can understand.</li>
-                    <li>Students will develop their skills in programming with statistical software.</li>
-                    <li>Students will develop their skills in using statistical software to engage in data analysis.</li>
-                    <li>Students will develop their skills in collaborative programming.</li>
-                    <li>Students will develop ways of thinking which make use of computing power.</li>
+                    <li>Students will develop their skills to utilize data wrangling tasks to prepare data for modeling.</li>
+                    <li>Students will develop their skills to perform visualization and exploratory data analysis using the R programming language to gain insights.</li>
+                    <li>Students will develop their understandings of the fundamental concepts used in statistical learning.</li>
+                    <li>Students will develop their skills to employ statistical learning to understand relationships in data, including both supervised and unsupervised learning approaches.</li>
+                    <li>Students will develop their skills to assess and compare predictive ability of models</li>
                 </ul>
                 <h3>Learning Outcomes</h3>
                 <p>
                     You can view the current learning outcomes (and objectives) by checking out the Progress
-                    Checker app I've created (linked in Canvas) or by viewing them through this shared document
-                     <a class="bodylinks" target="_blank" href="https://www.dropbox.com/s/p980ou4j904h75k/Stat184LearningOutcomes.pdf?dl=0">
-                        Stat 184 Learning Outcomes PDF</a>.
+                    Checker app I've created (linked in Canvas) or by viewing them through a forthcoming document.
+                    <!---<a class="bodylinks" target="_blank" href="https://www.dropbox.com/s/p980ou4j904h75k/Stat184LearningOutcomes.pdf?dl=0">
+                        Stat 184 Learning Outcomes PDF</a>. --->
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="responsibilities">What are our responsibilities? (Student and Instructor Responsibilities)
@@ -195,27 +185,10 @@
                         pose questions to help them construct meaning rather than show them how to get an answer.
                     </li>
                 </ol>
-                <h3>Student Responsibilities</h3>
+                <h3 id="student-responsibilities">Student Responsibilities</h3>
                 <p><mark>The class will come up with a list of student responsibilities.</mark></p>
-                <p>Fall 2022's list:</p>
-                <ul>
-                    <li>Attend class (on time)</li>
-                    <li>Don't cheat</li>
-                    <li>Be courteous, respectful, and friendly</li>
-                    <li>Make an effort in class</li>
-                    <li>Do your work on time</li>
-                    <li>Be sure that you have considerable engagement/participation throughout the semester</li>
-                </ul>
-                <h3>Instructor Responsibilities</h3>
+                <h3 id="instructor-responsibilities">Instructor Responsibilities</h3>
                 <p><mark>The class will come up with a lit of responsibilities they feel are important for me as the instructor.</mark></p>
-                <p>Fall 2022's list:</p>
-                <ul>
-                    <li>Give feedback</li>
-                    <li>Be accessible</li>
-                    <li>Grade fairly</li>
-                    <li>Give answers to assignments</li>
-                    <li>Give partial credit where applicable</li>
-                </ul>
                 <h3>Attendance and Participation Policies</h3>
                 <p>
                     Attendance and participation are vitally important for our class community. Attending each
@@ -364,9 +337,10 @@
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="calendar">What's the course schedule look like? (Tentative Course Calendar)</h2>
-                <p>You can check out the <em>tenative</em> course schedule: <a class="bodylinks" target="_blank"
+                <p>A tentative course calendar is coming.</p>
+                <!--- <p>You can check out the <em>tenative</em> course schedule: <a class="bodylinks" target="_blank"
                         href="https://www.dropbox.com/scl/fi/wu7bu452u62ldie13qlka/Fall2023_Stat184_Calendar.pdf?rlkey=fzxz6ilj0nxen0q7a307opumt&dl=0">Fall
-                        2023 Stat 184 Schedule</a></p>
+                        2023 Stat 184 Schedule</a></p> --->
                  <p>Please keep in mind that this calendar may change at any time to best meet the needs of the class.</p>   
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="inclusion">Is Our Class Inclusive? YES! (Inclusive Practices)</h2>
@@ -673,7 +647,7 @@
                 </p>
                 <p><mark>The class will generate ideas and then vote on consequences.</mark></p>
                 <table rules="all" border="1pt">
-                    <caption>Fall 2022 Consequences/Sanctions for Violating Academic Integrity</caption>
+                    <caption>Fall 2023 Consequences/Sanctions for Violating Academic Integrity</caption>
                     <tr>
                         <td></td>
                         <th scope="col">First Time</th>
@@ -682,21 +656,21 @@
                     </tr>
                     <tr>
                         <th scope="row">Minor</th>
-                        <td>Warning</td>
-                        <td>Redo the assignment </td>
-                        <td>0 for Assignment Grade</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
                     </tr>
                     <tr>
                         <th scope="row">Moderate</th>
-                        <td>Redo the assignment</td>
-                        <td>Reduce the Assignment Grade by 2 levels</td>
-                        <td>Reduce the Course Grade by 1 level</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
                     </tr>
                     <tr>
                         <th scope="row">Major</th>
-                        <td>Redo the assignment & reduce the Assignment Grade by 1 level</td>
-                        <td>Reduce the Course Grade by 1 level</td>
-                        <td>Recommend a Grade of XF for the course to the Committee</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
                     </tr>
                 </table>
                 <p>
