--- a/teaching.html
+++ b/teaching.html
@@ -35,8 +35,8 @@
           </h2>
             <ul>
               <li>Stat 184: Introduction to R. Check out the <a href="stat184syllabus.html" class="bodylinks">STAT184 Course FAQ (syllabus)</a>.</li>
+              <li>Stat 380: Data Science Through Statistical Reasoning and Computation. Check out the <a href="stat380syllabus.html" class="bodylinks">STAT380 Course FAQ (syllabus)</a>.</li>
               <li>Stat 461: Analysis of Variance. Check out the <a href="stat461syllabus.html" class="bodylinks">STAT461 Course FAQ (syllabus)</a>.</li>
-              <li>Stat 380: Data Science Through Statistical Reasoning and Computation. (Syllabus forthcoming)</li>
               <li>Stat 592: Teaching Statitics. Check out the <a href="stat592syllabus.html" class="bodylinks">STAT592 Syllabus</a>.</li>
           <br />
           <h2 id="readings"><a name="readings"></a>Useful Readings<br /></h2>
