--- a/stat380syllabus.html
+++ b/stat380syllabus.html
@@ -78,8 +78,7 @@
                 <h2 id="courseMaterials">What materials do I need for the class? (Course Materials)</h2>
                 <h3 id="textbooks">Textbooks</h3>
                 <p>
-                    In terms of textbooks, we will draw from a variety of sources which will be posted in Canvas. We
-                    will primarily use the following textbooks:
+                    In terms of textbooks, we will draw from a variety of sources which will be posted in Canvas. We will primarily use the following textbooks:
                 </p>
                 <ul>
                     <li><a href="https://mdsr-book.github.io/mdsr3e/" target="_blank" class="bodylinks">Modern Data Science with R by Baumer, Kaplan, and Horton</a> (available for free at link).</li>
@@ -91,7 +90,7 @@
                 </p>
                 <h3 id="technology">Technology Needs</h3>
                 <p>
-                    As a technolgy based course, you will need access to the following:
+                    As a technology based course, you will need access to the following:
                 </p>
                 <ul>
                     <li>A computer running either Windows, Mac OS, or Linux. If you do not have a personal computer or
@@ -102,7 +101,7 @@
                         <em>If using your own computer/laptop:</em>
                         <ul>
                             <li>
-                                You will need to install R on your machine. You can download the lastest verion at <a
+                                You will need to install R on your machine. You can download the latest version at <a
                                     class="bodylinks" target="_blank"
                                     href="https://cran.r-project.org/">https://cran.r-project.org/</a>. If you have R
                                 already installed, you should check the version and update to the latest. As of 8/17/23,
@@ -125,9 +124,7 @@
                     </li>
                 </ul>
                 <p>
-                    Beyond the above elements, I've done what I can to minimize additonal costs to you. You
-                    should not need to purchase any accounts, books, or other materials. Any reading materials will be
-                    linked in Canvas.
+                    Beyond the above elements, I've done what I can to minimize additional costs to you. You should not need to purchase any accounts, books, or other materials. Any reading materials will be linked in Canvas.
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="goalsObjectives">What will I learn in this class? (Course Goals and Objectives)</h2>
